test/classes/casts/argumentCoerce_Inout/error/from-owned-A-nilable-to-unmanaged-A-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from owned A? to unmanaged A?
proc bar(inout x: unmanaged A?) {
  x = new unmanaged A?();
}
proc foo() {
  var a = new owned A?();
  bar(a);
}
proc main() {
  foo();
}
